--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css"> 
 
     <!-- Firebase SDK -->
     <script type="module">
@@ -21,14 +21,14 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-        apiKey: "AIzaSyDBPPIVCdMrU9xLd3LVK5vLN5V4joGoEFo",
-        authDomain: "thebadguyhimself-c01cf.firebaseapp.com",
-        projectId: "thebadguyhimself-c01cf",
-        storageBucket: "thebadguyhimself-c01cf.appspot.com",
-        messagingSenderId: "126608259087",
-        appId: "1:126608259087:web:2ae3674ba8c9a71cfc8b7a",
-        measurementId: "G-E633EWVMCP"
-      };
+            apiKey: "AIzaSyDBPPIVCdMrU9xLd3LVK5vLN5V4joGoEFo",
+            authDomain: "thebadguyhimself-c01cf.firebaseapp.com",
+            projectId: "thebadguyhimself-c01cf",
+            storageBucket: "thebadguyhimself-c01cf.appspot.com",
+            messagingSenderId: "126608259087",
+            appId: "1:126608259087:web:2ae3674ba8c9a71cfc8b7a",
+            measurementId: "G-E633EWVMCP"
+        };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
@@ -64,7 +64,7 @@
             const trackFile = document.getElementById('track-file').files[0];
 
             try {
-                await addDoc(collection(db, 'tracks'), {
+                const trackRef = await addDoc(collection(db, 'tracks'), {
                     title: trackTitle,
                     file: trackFile.name // Store just the file name, actual file upload needs Firebase Storage
                 });
@@ -126,7 +126,7 @@
                                 <h2 class="card-title">${mix.title}</h2>
                                 <p>${mix.description}</p>
                                 <div class="card-actions justify-end">
-                                    <button class="btn btn-primary">Listen Now</button>
+                                    <button class="btn btn-primary play-btn" data-file="${mix.file}">Play</button>
                                 </div>
                             </div>
                         </div>
@@ -166,6 +166,48 @@
             }
         }
         fetchEvents();
+
+        // Fetch and display news articles about techno and hardcore
+        async function fetchNews() {
+            const apiKey = 'YOUR_NEWS_API_KEY'; // Replace with your News API key
+            const url = `https://newsapi.org/v2/everything?q=techno+hardcore&apiKey=${apiKey}`;
+
+            try {
+                const response = await fetch(url);
+                const data = await response.json();
+                const newsList = document.getElementById('news-list');
+                data.articles.forEach(article => {
+                    const articleElement = document.createElement('div');
+                    articleElement.classList.add('swiper-slide');
+                    articleElement.innerHTML = `
+                        <div class="card bg-gray-800 shadow-xl">
+                            <figure><img src="${article.urlToImage}" alt="${article.title}" /></figure>
+                            <div class="card-body">
+                                <h2 class="card-title">${article.title}</h2>
+                                <p>${article.description}</p>
+                                <div class="card-actions justify-end">
+                                    <a href="${article.url}" target="_blank" class="btn btn-primary">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    newsList.appendChild(articleElement);
+                });
+            } catch (error) {
+                console.error('Error fetching news articles: ', error);
+            }
+        }
+        fetchNews();
+
+        // Handle play button click to play selected track
+        document.addEventListener('click', (e) => {
+            if (e.target && e.target.classList.contains('play-btn')) {
+                const file = e.target.getAttribute('data-file');
+                const audioPlayer = document.getElementById('audio-player');
+                audioPlayer.src = `your_storage_url/${file}`;
+                audioPlayer.play();
+            }
+        });
     </script>
 </head>
 <body class="bg-gray-900 text-white font-mono overflow-x-hidden">
@@ -186,6 +228,9 @@
                             <a href="#events" class="block py-2 md:p-0 text-white hover:text-blue-500">Events</a>
                         </li>
                         <li>
+                            <a href="#news" class="block py-2 md:p-0 text-white hover:text-blue-500">News</a>
+                        </li>
+                        <li>
                             <a href="#contact" class="block py-2 md:p-0 text-white hover:text-blue-500">Contact</a>
                         </li>
                         <li>
@@ -193,6 +238,12 @@
                         </li>
                         <li>
                             <a href="#login" class="block py-2 md:p-0 text-white hover:text-blue-500">Login</a>
+                        </li>
+                        <li>
+                            <a href="#profile" class="block py-2 md:p-0 text-white hover:text-blue-500" id="profile-link" style="display: none;">Profile</a>
+                        </li>
+                        <li>
+                            <button class="btn btn-primary" id="logout-btn" style="display: none;">Logout</button>
                         </li>
                     </ul>
                 </div>
@@ -249,6 +300,12 @@
                 <div class="swiper-pagination"></div>
             </div>
 
+            <!-- Audio Player -->
+            <div class="flex justify-center mt-10">
+                <audio id="audio-player" controls class="w-full max-w-lg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
         </div>
     </section>
 
@@ -258,6 +315,20 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8" id="event-list">
                 <!-- Events will be dynamically added here -->
             </div>
+        </div>
+    </section>
+
+    <section id="news" class="py-20 bg-gray-900">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center">Latest News</h2>
+            
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper" id="news-list">
+                    <!-- News articles will be dynamically added here -->
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
         </div>
     </section>
 
@@ -308,17 +379,36 @@
             <h2 class="text-3xl font-bold mb-8 text-center">Login</h2>
             <form class="w-full max-w-lg mx-auto" id="login-form">
                 <div class="mb-4">
-                    <label for="login-email" class="block text-gray-400 text-sm font-bold mb-2">Email</label>
+                    <label for="email" class="block text-gray-400 text-sm font-bold mb-2">Email</label>
                     <input type="email" id="login-email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Your Email" required>
                 </div>
                 <div class="mb-4">
-                    <label for="login-password" class="block text-gray-400 text-sm font-bold mb-2">Password</label>
+                    <label for="password" class="block text-gray-400 text-sm font-bold mb-2">Password</label>
                     <input type="password" id="login-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Your Password" required>
                 </div>
                 <div class="flex items-center justify-center">
                     <button class="btn btn-primary" type="submit">Login</button>
                 </div>
             </form>
+        </div>
+    </section>
+
+    <section id="profile" class="py-20 bg-gray-900" style="display: none;">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center">Your Profile</h2>
+            <div class="w-full max-w-lg mx-auto">
+                <div class="mb-4">
+                    <label for="profile-name" class="block text-gray-400 text-sm font-bold mb-2">Name</label>
+                    <input type="text" id="profile-name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" disabled>
+                </div>
+                <div class="mb-4">
+                    <label for="profile-email" class="block text-gray-400 text-sm font-bold mb-2">Email</label>
+                    <input type="email" id="profile-email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" disabled>
+                </div>
+                <div class="flex items-center justify-center">
+                    <button class="btn btn-primary" id="update-profile-btn">Update Profile</button>
+                </div>
+            </div>
         </div>
     </section>
 
